// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should launch logout when button is pressed: Logged in Header 1`] = `
<div>
  <nav
    aria-label="main navigation"
    class="navbar"
    role="navigation"
  >
    <div
      class="navbar-brand"
    >
      <a
        class="navbar-item"
        href="/"
      >
        <img
          alt="Logo"
          data-nimg="1"
          decoding="async"
          height="28"
          loading="lazy"
          src="/admios-logo.svg"
          style="color: transparent;"
          width="112"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        class="navbar-burger"
        data-target="main-navbar-inner"
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      class="navbar-menu"
      id="main-navbar-inner"
    >
      <div
        class="navbar-start"
      >
        <a
          class="navbar-item"
          href="/"
        >
          My Boards
        </a>
      </div>
      <div
        class="navbar-end"
      >
        <div
          class="navbar-item"
        >
          Username: 
          test
        </div>
        <a
          class="navbar-item"
        >
          Logout
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`should show login when there is no user: Default Header 1`] = `
<div>
  <nav
    aria-label="main navigation"
    class="navbar"
    role="navigation"
  >
    <div
      class="navbar-brand"
    >
      <a
        class="navbar-item"
        href="/"
      >
        <img
          alt="Logo"
          data-nimg="1"
          decoding="async"
          height="28"
          loading="lazy"
          src="/admios-logo.svg"
          style="color: transparent;"
          width="112"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        class="navbar-burger"
        data-target="main-navbar-inner"
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      class="navbar-menu"
      id="main-navbar-inner"
    >
      <div
        class="navbar-start"
      >
        <a
          class="navbar-item"
          href="/"
        >
          My Boards
        </a>
      </div>
      <div
        class="navbar-end"
      >
        <div
          class="navbar-item"
        >
          Username: 
          guest
        </div>
        <a
          class="navbar-item"
          href="/login"
        >
          Login
        </a>
      </div>
    </div>
  </nav>
</div>
`;
